--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   equatable: ^2.0.5
   gap: ^3.0.1
   connectivity_plus: ^5.0.1
+  hydrated_bloc: ^9.1.2
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
